small refactoring and fixed word wrapping in GUI part